<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/cr_flag"
    tools:context="com.example.android.czechrepublictrivia.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_1"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_1_brno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brno" />

            <RadioButton
                android:id="@+id/question_1_praha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prague" />

            <RadioButton
                android:id="@+id/question_1_pardubice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pardubice" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_2"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/president_s_last_name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_3"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chb_q3_poland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poland" />

            <CheckBox
                android:id="@+id/chb_q3_france"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/chb_q3_poland"
                android:text="@string/france" />

            <CheckBox
                android:id="@+id/chb_q3_germany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/chb_q3_france"
                android:text="@string/germany" />

            <CheckBox
                android:id="@+id/chb_q3_slovenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chb_q3_poland"
                android:text="@string/slovenia" />

            <CheckBox
                android:id="@+id/chb_q3_austria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chb_q3_france"
                android:layout_toRightOf="@id/chb_q3_slovenia"
                android:text="@string/austria" />

            <CheckBox
                android:id="@+id/chb_q3_italy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chb_q3_germany"
                android:layout_toRightOf="@id/chb_q3_austria"
                android:text="@string/italy" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_4"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_4_snezka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snezka" />

            <RadioButton
                android:id="@+id/question_4_jested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jested" />

            <RadioButton
                android:id="@+id/question_4_rip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rip" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_5"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_5_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water" />

            <RadioButton
                android:id="@+id/question_5_cola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coca_cola" />

            <RadioButton
                android:id="@+id/question_5_beer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_6"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/question_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_7"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_7_svickova"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/svickova" />

            <RadioButton
                android:id="@+id/question_7_gulas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gulas" />

            <RadioButton
                android:id="@+id/question_7_bramborak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bramborak" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_8"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_8_slovakia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/slovak" />

            <RadioButton
                android:id="@+id/question_8_germany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/germany" />

            <RadioButton
                android:id="@+id/question_8_czech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/czech" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_9"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chb9_bernard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bernard" />

            <CheckBox
                android:id="@+id/chb9_pilsner_urquel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/chb9_bernard"
                android:text="@string/pilsner_urquel" />

            <CheckBox
                android:id="@+id/chb9_stella_artois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/chb9_pilsner_urquel"
                android:text="@string/stella_artois" />

            <CheckBox
                android:id="@+id/chb9_tuborg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chb9_bernard"
                android:text="@string/tuborg" />

            <CheckBox
                android:id="@+id/chb9_budvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chb9_pilsner_urquel"
                android:layout_toRightOf="@id/chb9_tuborg"
                android:text="@string/budweiser_budvar" />

            <CheckBox
                android:id="@+id/chb9_ursur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chb9_stella_artois"
                android:layout_toRightOf="@id/chb9_budvar"
                android:text="@string/ursur" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_10"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/question_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_10_olomouc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oloumouc" />

            <RadioButton
                android:id="@+id/question_10_kutna_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kutna_hora" />

            <RadioButton
                android:id="@+id/question_10_chomutov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chomutov" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_quiz_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitQuizAnswers"
            android:text="@string/submit_answer"
            android:textColor="#fafafa" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="#fafafa" />

    </LinearLayout>

</ScrollView>
